--- a/ApdateFilmUser/ApdateFilmUser.csproj
+++ b/ApdateFilmUser/ApdateFilmUser.csproj
@@ -80,6 +80,9 @@
 		<MauiXaml Update="Views\FavoritesPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Views\MediaPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 
 </Project>
